fixed issue that website was slightly bigger then the viewport. this was caused by using 100vw which incluided the vertical scroll bar in size of the screen and therefore added a second horizontal scroll bar to see what would normally be under the scroll bar. I fixed this by changing width of all elements to auto. for more possible solutions see https://stackoverflow.com/questions/23367345/100vw-causing-horizontal-overflow-but-only-if-more-than-one

--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,15 @@ html{
   color: white;
   display: flex;
   justify-content: center;
+  
 }
 body{
 background-color: var(--black);
 
+}
+
+a{
+  
 }
 button{
   background: none;
@@ -97,7 +102,7 @@ display: inline;
 .container .seeWorkButton {
   display: relative;
   width: 20vw;
-  max-width: 100vw;
+  max-width: 90vw;
   background-color: none;
   height: 'auto';
   margin: 0%; /* this may cause the website to be too wide */
@@ -188,12 +193,19 @@ display: inline;
   background-color: palegoldenrod;
 }
 /* -------------------------------Contact ---------------------------*/
+.blockContainer{
+  width: 100%;
+}
 
 .contact{
   display: flex;
   flex-direction: column;
   height: 60vh;
-  width: 100vw;
+  width: auto; 
+  /* using auto over vw because vw takes into account the vertical scroll bar
+   and therefore adds space to the right of the page. this makes things 
+   hard to center as well as looks sloppy*/ 
+  max-width: 100%;
   justify-content: center;
   align-items: center;
   font-size: 2vw;
